# Forkeur

./: .gitignore  .mcp.json  CLAUDE.md  Makefile  SETUP.md  all-responses.json  api-calls.json  compare-brussels-output.json  deliveroo-data.json  feed-items-sample.json  package.json  takeaway-restaurants.json  todo.md  uber-eats-output.json  ubereats-data.json  ubereats-feed-raw.json  ubereats-feed-sample.json
backend/: .env.example  .gitignore  CLAUDE.md  _probe_api.py  _probe_api2.py  _probe_api3.py  _probe_api_intercept.py  _probe_apihunt.py  _probe_cfg.py  _probe_chunk.py  _probe_citymeal.py  _probe_decide.py  _probe_deliveroo_menu.py  _probe_js.py  _probe_menu.py  _probe_menu_dom.py  _probe_net.py  _probe_nextdata.py  _probe_takeaway_server.py  alerting.py  auth.py  clean_order_urls.py  communes.py  conftest.py  constants.py  db.py  discover_apis.py  find_websites.py  geocode_missing.py  main.py  matching.py  models.py  pgpool.py  presence_probe.py  probe_hours.py  pyproject.toml  run_scrapers_to_json.py  scheduler.py  ssrf_guard.py  sync_direct_listings.py  (+3 more)
backend/dashboard/: package-lock.json  package.json  vite.config.ts
backend/ops/: migrate.py
backend/routers/: altcha.py  auth_router.py  claims.py  cleanup.py  data.py  metrics.py  public.py  runs.py  schedule.py  scrapers.py  websites.py
backend/scrapers/: base.py  deliveroo.py  direct.py  direct_classify.py  direct_menu.py  dom_menu.py  enrich_contacts.py  fees.py  match.py  metrics.py  presence_probe_run.py  presence_search.py  promos.py  takeaway.py  takeaway_geo_backfill.py  ubereats.py  (+1 more)
(+283 files in other folders)
