[project]
name = "forkeur-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.29.0",
  "apscheduler>=3.10.4",
  "playwright>=1.44.0",
  "supabase>=2.4.0",
  "python-dotenv>=1.0.1",
  "pydantic>=2.7.0",
  "playwright-stealth>=2.0.3",
]

[tool.uv]
dev-dependencies = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "httpx>=0.27.0",
]
