[project]
name = "forkeur-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.29.0",
  "apscheduler>=3.10.4",
  "playwright>=1.44.0",
  "python-dotenv>=1.0.1",
  "pydantic>=2.7.0",
  "playwright-stealth>=2.0.3",
  "email-validator>=2.3.0",
  "rapidfuzz>=3.14.5",
  "psycopg[binary]>=3.3.4",
  "psycopg-pool>=3.3.1",
  "pyjwt>=2.13.0",
  "phonenumbers>=9.0.32",
  "curl-cffi>=0.15.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv]
dev-dependencies = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "httpx>=0.27.0",
]
